tests/ui/abi/unsupported.arm.stderr
error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:37:8
   |
LL | extern "ptx-kernel" fn ptx() {}
   |        ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:39:22
   |
LL | fn ptx_ptr(f: extern "ptx-kernel" fn()) {
   |                      ^^^^^^^^^^^^

error[E0570]: "ptx-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:43:8
   |
LL | extern "ptx-kernel" {}
   |        ^^^^^^^^^^^^

error[E0570]: "gpu-kernel" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:45:8
   |
LL | extern "gpu-kernel" fn gpu() {}
   |        ^^^^^^^^^^^^

error[E0570]: "msp430-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:57:8
   |
LL | extern "msp430-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0570]: "avr-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:60:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-m" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:63:8
   |
LL | extern "riscv-interrupt-m" {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: "x86-interrupt" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:66:8
   |
LL | extern "x86-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:69:8
   |
LL | extern "thiscall" fn thiscall() {}
   |        ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:71:27
   |
LL | fn thiscall_ptr(f: extern "thiscall" fn()) {
   |                           ^^^^^^^^^^

error[E0570]: "thiscall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:75:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:78:8
   |
LL | extern "stdcall" fn stdcall() {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:82:26
   |
LL | fn stdcall_ptr(f: extern "stdcall" fn()) {
   |                          ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:88:8
   |
LL | extern "stdcall" {}
   |        ^^^^^^^^^
   |
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

error[E0570]: "stdcall-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:92:8
   |
LL | extern "stdcall-unwind" {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: if you need `extern "stdcall-unwind"` on win32 and `extern "C-unwind"` everywhere else, use `extern "system-unwind"`

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:112:8
   |
LL | extern "vectorcall" fn vectorcall() {}
   |        ^^^^^^^^^^^^

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:114:29
   |
LL | fn vectorcall_ptr(f: extern "vectorcall" fn()) {
   |                             ^^^^^^^^^^^^

error[E0570]: "vectorcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:118:8
   |
LL | extern "vectorcall" {}
   |        ^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-call" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:121:28
   |
LL | fn cmse_call_ptr(f: extern "cmse-nonsecure-call" fn()) {
   |                            ^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:126:8
   |
LL | extern "cmse-nonsecure-entry" fn cmse_entry() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:128:29
   |
LL | fn cmse_entry_ptr(f: extern "cmse-nonsecure-entry" fn()) {
   |                             ^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: "cmse-nonsecure-entry" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:132:8
   |
LL | extern "cmse-nonsecure-entry" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:100:17
   |
LL | fn cdecl_ptr(f: extern "cdecl" fn()) {
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` (part of `#[warn(future_incompatible)]`) on by default

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:105:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

warning: "cdecl-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:108:1
   |
LL | extern "cdecl-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C-unwind"` instead

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:97:1
   |
LL | extern "cdecl" fn cdecl() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

error: aborting due to 22 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0570`.
